========================
   beancount: CHANGES
========================
Note: This file contains only changes in the 'default' branch.


2018-04-01

  - Merged PR15 by Johannes Harms:
    Added the following features to the forecasting plugin:
    - Yearly repetition of recurring transactions (instead of just monthly)
    - Users may optionally specify an end date
    - Users may optionally specify the number of repetitions
    "I used this code to calculate scenarios for a possible real estate purchase
    and I contribute a cleaned-up version as an example file."

  - Merged PR54 & Fixed #232: Align quoted commodities correctly in ledger price
    statements (from Martin Michlmayr).

  - Merged PR57: query_execute: Allow ordering by columns which may be None
    (from Jakob Schnitzer). Made some adjustments to generalize on all
    datatypes.

  - Merged PR62: Also allow 0/0 in SAFEDIV() (from Jakob Schnitzer), with small
    adjustments to catch only the specific invalid operations on Decimal.

  - Merged PR64 from yagebu@ (Jakob Schnitzer), which makes the Inventory class
    rely on the fact that Position is immutable in order to avoid unnecessary
    copies. This yields an 18% speedup with no difference.

  - Removed unused and invalid mutating method Position.set_units(). Amazing
    obsolete stuff like this can still be found.


2018-03-31

  - Fixed #10: "print from close_date" causes problems on account open. This was
    stemming from a bug in the implementation of the FROM clause execution. I
    changed the "entry" context functions to also accept a RowContext object, as
    the simple functions may be called in either entry or posting context.

    (The SQL shell remains the part of Beancount which is severely undertested
    and wading into that code once again has convinced me I need to rewrite the
    shell from scratch, it'll be simpler and better. The distinction between
    entry and posting context will go away in the next version.)
