@@ -6,6 +6,9 @@ Note: This file contains only changes in the 'default' branch.
 
 2018-04-01
 
+  - Merged PR65: Use parse_version to compare versions; then replicated
+    parse_version() locally to avoid the dependency on setuptools.
+
   - Merged PR15 by Johannes Harms:
     Added the following features to the forecasting plugin:
     - Yearly repetition of recurring transactions (instead of just monthly)
